# giscl

./: .lvimrc  CMakeLists.txt
src/: CMakeLists.txt  kernels.cl  main.cpp  path_utils.cpp  path_utils.hpp  path_utils.tcc  raster.cpp  raster.hpp
tools/: CMakeLists.txt
